# maluS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.sh
alembic/: env.py  script.py.mako
alembic/versions/: 01135281e9f4_initial_schema.py  8208e7694462_user_auth_columns.py  f1a2b3c4d5e6_reviewer_private_notes.py
deploy/: Caddyfile  Caddyfile.docker
docs/: usage.md
docs/adr/: 0001-v1-web-pivot.md  0002-stack.md
docs/ops/: runbook.md
docs/plan/: 00-general-plan.md  01-foundations.md  02-harvest.md  03-triage.md  04-gui.md  05-lifecycle.md  06-ai-roles.md  07-e2e.md  90-claude-code-kickoff.md
docs/plan/v1.10/: 00-overview.md  01-admin-superuser.md
docs/plan/v1.2/: 00-overview.md  01-member-management.md  02-reviewer-onboarding.md
docs/plan/v1.3/: 00-overview.md  01-admin-delete-user.md
docs/plan/v1.4/: 00-overview.md  01-reviewer-editor-redesign.md
docs/plan/v1.5/: 00-overview.md  01-delete-review.md
docs/plan/v1.6/: 00-overview.md  01-save-draft-and-submission-status.md
docs/plan/v1.7/: 00-overview.md  (+1 more)
docs/spec/: comment-syntax.md  data-model.md  gui-test-checklist.md  rid-schema.md
docs/usage/: ai-reviewer.md
examples/srs-demo/: srs.md
gui/: README.md  rtd.html
memory/00-index/: malus-index.md
memory/decisions/: 2026-07-03-architecture-decisions.md  2026-07-09-init-command.md  2026-07-09-step-01-decisions.md  2026-07-09-step-02-decisions.md  2026-07-09-step-03-decisions.md  2026-07-09-step-04-decisions.md  2026-07-09-step-05-decisions.md  2026-07-09-step-06-decisions.md  2026-07-09-step-07-decisions.md  2026-07-10-v1-step-01-decisions.md  2026-07-10-v1-step-02-decisions.md  2026-07-10-v1-step-03-decisions.md  2026-07-10-v1-step-04-decisions.md  2026-07-10-v1-step-05-decisions.md  2026-07-10-v1-step-06-decisions.md  2026-07-10-v1-step-07-decisions.md  2026-07-10-v1-step-08-decisions.md  2026-07-10-v1-step-09-decisions.md  2026-07-10-v1-step-10-decisions.md  2026-07-10-v1-step-11-decisions.md  2026-07-10-v1-step-12-decisions.md  2026-07-12-v1.2-step-01-member-management.md  2026-07-12-v1.2-step-02-reviewer-onboarding.md  2026-07-12-v1.3-step-01-admin-delete-user.md  2026-07-12-v1.4-step-01-reviewer-editor.md  2026-07-12-v1.5-step-01-delete-review.md  2026-07-15-v1.6-save-draft.md  2026-07-15-v1.7-ai-coowner-draft.md  2026-07-16-v1.8-comment-retraction.md  2026-07-16-v1.9-alum-refresh.md
memory/knowledge/: roles-model.md  tech-stack.md
memory/specs/: comment-syntax.md  rid-schema-and-lifecycle.md
prompts/: moderator.md  owner.md  reviewer.md
scripts/: backup.sh  restore.sh
src/malus/: __init__.py  ai.py  cli.py  constants.py  gui_constants.py  harvest.py  lifecycle.py  logging.py  models.py  parser.py  report.py  triage.py
tests/: test_ai.py  test_ai_cli.py  test_cli.py  test_constants.py  test_e2e.py  test_finalize.py  test_gui.py  test_gui_constants.py  test_harvest.py  test_init.py  test_lifecycle.py  test_models.py  test_package.py  test_parser.py  test_report.py  test_review.py  test_triage.py  test_verify.py
tests/api/: conftest.py  test_api.py  test_auth.py  test_draft_submit.py
tests/db/: conftest.py  test_db_mapping.py  test_db_migration.py  test_db_models.py  test_delete_review_service.py  test_delete_user.py  test_legacy_import.py  test_repo.py  test_services.py
tests/e2e/: conftest.py  test_v1_e2e.py
tests/mcp/: conftest.py  test_mcp.py
tests/ops/: test_caddy.py  test_ops.py
tests/web/: conftest.py  test_accounts.py  test_admin_delete.py  test_admin_superuser.py  test_ai_owner.py  test_assets.py  test_delete_review.py  test_editor.py  test_members.py  test_new_review.py  test_notes.py  test_onboarding.py  test_retraction.py  test_submission_panel.py  test_web.py
(+81 files in other folders)
