[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malus"
version = "0.1.0"
description = "Formal RID-based review management for Markdown documents"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Alberto Boffi", email = "alberto.boffi@alum-lab.com" }]
keywords = ["review", "rid", "markdown", "documentation", "rtd"]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ai = ["anthropic>=0.40"]  # optional: only the live AI engine needs it

[project.scripts]
malus = "malus.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"malus.prompts" = ["*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
