[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malus"
version = "0.1.0"
description = "Formal RID-based review management for Markdown documents"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Alberto Boffi", email = "alberto.boffi@alum-lab.com" }]
keywords = ["review", "rid", "markdown", "documentation", "rtd"]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.22",  # ADR 0002: ORM (SQLAlchemy 2 + Pydantic 2) on SQLite->Postgres
    "alembic>=1.13",     # ADR 0002: schema migrations
    "fastapi>=0.110",    # ADR 0002: typed HTTP API (one contract for GUI + AI agent)
    "uvicorn>=0.29",     # ADR 0002: ASGI server for `malus serve`
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]  # httpx backs the FastAPI TestClient
ai = ["anthropic>=0.40"]  # optional: only the live AI engine needs it

[project.scripts]
malus = "malus.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"malus.prompts" = ["*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
