[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malus"
version = "1.8.0"
description = "Formal RID-based review management for Markdown documents"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Alberto Boffi", email = "alberto.boffi@alum-lab.com" }]
keywords = ["review", "rid", "markdown", "documentation", "rtd"]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.22",  # ADR 0002: ORM (SQLAlchemy 2 + Pydantic 2) on SQLite->Postgres
    "alembic>=1.13",     # ADR 0002: schema migrations
    "fastapi>=0.110",    # ADR 0002: typed HTTP API (one contract for GUI + AI agent)
    "uvicorn>=0.29",     # ADR 0002: ASGI server for `malus serve`
    "argon2-cffi>=23.1", # ADR 0002: password hashing
    "itsdangerous>=2.1", # signed httponly session cookies (Starlette SessionMiddleware)
    "jinja2>=3.1",       # server-rendered GUI templates (Steps 5-6)
    "python-multipart>=0.0.9",  # HTML form parsing
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]  # httpx backs the FastAPI TestClient
mcp = ["mcp>=1.2"]  # the MCP server for the interactive AI reviewer (malus mcp)
postgres = ["psycopg[binary]>=3.1"]  # Postgres driver (SQLite is the default)
ai = ["anthropic>=0.40"]  # optional: only the paid server-side engine needs it

[project.scripts]
malus = "malus.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"malus.prompts" = ["*.md"]
"malus.web" = ["templates/*.html", "static/*", "static/vendor/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
